--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "markdown-to-jsx": "^7.1.7",
     "next": "12.2.5",
+    "parse-numeric-range": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
